--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,41 @@
+import com.vanniktech.maven.publish.SonatypeHost
+
 buildscript {
     ext {
         compose_ui_version = '1.3.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id "com.vanniktech.maven.publish" version "0.25.1"
 }
+
+mavenPublishing {
+    publishToMavenCentral(SonatypeHost.S01)
+
+    signAllPublications()
+
+    coordinates("io.dock2dock", "dock2dock-android", "1.0.0-SNAPSHOT")
+
+    pom {
+        name = "Dock2Dock"
+        description = "Dock2Dock SDK for Android."
+        inceptionYear = "2023"
+        url = "https://github.com/dock2dock/dock2dock-android/"
+        developers {
+            developer {
+                id = "dock2dock"
+                name = "Dock2Dock"
+                url = "https://github.com/dock2dock/"
+            }
+        }
+        scm {
+            url = "https://github.com/dock2dock/dock2dock-android/"
+            connection = "scm:git:git://github.com/dock2dock/dock2dock-android.git"
+            developerConnection = "scm:git:ssh://git@github.com/dock2dock/dock2dock-android.git"
+        }
+    }
+}
+
