--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -7,9 +7,13 @@ jobs:
   publish-snapshot:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Maven Central Repository
+      - name: Clone Repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v3
+        with:
+          java-version: 1.8
 
       - name: Clean build directory
         run: ./gradlew clean
