--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -10,10 +10,11 @@ jobs:
       - name: Clone Repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 18
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: '18'
+          distribution: 'adopt'
 
       - name: Clean build directory
         run: ./gradlew clean
