--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,31 @@
-import com.vanniktech.maven.publish.SonatypeHost
-
 buildscript {
+    apply from: 'dependencies.gradle'
     ext {
-        compose_ui_version = '1.3.3'
+        compose_ui_version = '1.4.1'
+        kotlinVersion = '1.8.0'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
-    id "com.vanniktech.maven.publish" version "0.25.1"
-}
 
-mavenPublishing {
-    publishToMavenCentral(SonatypeHost.S01)
+    repositories {
+        mavenCentral()
+        google()
+        gradlePluginPortal()
+    }
 
-    signAllPublications()
-
-    coordinates("io.dock2dock", "dock2dock-android", "1.0.0-SNAPSHOT")
-
-    pom {
-        name = "Dock2Dock"
-        description = "Dock2Dock SDK for Android."
-        inceptionYear = "2023"
-        url = "https://github.com/dock2dock/dock2dock-android/"
-        developers {
-            developer {
-                id = "dock2dock"
-                name = "Dock2Dock"
-                url = "https://github.com/dock2dock/"
-            }
-        }
-        scm {
-            url = "https://github.com/dock2dock/dock2dock-android/"
-            connection = "scm:git:git://github.com/dock2dock/dock2dock-android.git"
-            developerConnection = "scm:git:ssh://git@github.com/dock2dock/dock2dock-android.git"
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlinVersion"
+        classpath "com.vanniktech:gradle-maven-publish-plugin:0.25.1"
     }
 }
 
+
+
+subprojects {
+    group = GROUP
+}
+
+ext {
+    compileSdkVersion = 33
+    buildToolsVersion = "30.0.3"
+}
