--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+GROUP=io.dock2dock
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
@@ -21,3 +22,9 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+POM_NAME=Dock2Dock
+POM_DESCRIPTION=Dock2Dock SDK for Android
+POM_INCEPTION_YEAR=2023
+POM_URL=https://github.com/dock2dock/dock2dock-android/
+POM_ARTIFACT_ID=dock2dock-android
