Added gradle files for deployment. Added LICENSE file.

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,5 +1,8 @@
 apply from: configs.androidLibrary
 
+apply plugin: 'signing'
+apply plugin: 'maven-publish'
+
 dependencies {
     implementation "androidx.compose.runtime:runtime:$compose_ui_version"
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -9,3 +12,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+ext {
+    artifactId = "dock2dock-android"
+    artifactName = "dock2dock-android"
+    artifactDescrption = "Dock2Dock Android SDK"
+}
+
+apply from: "${rootDir}/deploy/deploy.gradle"
