--- a/crossdock/build.gradle
+++ b/crossdock/build.gradle
@@ -1,5 +1,8 @@
 apply from: configs.androidLibrary
 
+apply plugin: 'signing'
+apply plugin: 'maven-publish'
+
 dependencies {
     implementation "androidx.compose.runtime:runtime:$compose_ui_version"
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -23,3 +26,11 @@ dependencies {
     implementation project(":networking")
     implementation project(":application")
 }
+
+ext {
+    artifactId = "dock2dock-android"
+    artifactName = "dock2dock-android"
+    artifactDescrption = "Dock2Dock Android SDK"
+}
+
+apply from: "${rootDir}/deploy/deploy.gradle"
