--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.time.Duration
+
 buildscript {
     apply from: 'dependencies.gradle'
     ext {
@@ -19,7 +21,10 @@ buildscript {
     }
 }
 
-
+plugins {
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
+    id 'io.codearte.nexus-staging' version '0.30.0'
+}
 
 subprojects {
     group = GROUP
@@ -28,4 +33,9 @@ subprojects {
 ext {
     compileSdkVersion = 33
     buildToolsVersion = "30.0.3"
+
+    group_name = GROUP
+    version_name = VERSION_NAME
 }
+
+apply from: "${rootDir}/deploy/deploy-root.gradle"
