--- a/gradle.properties
+++ b/gradle.properties
@@ -23,8 +23,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-POM_NAME=Dock2Dock
-POM_DESCRIPTION=Dock2Dock SDK for Android
-POM_INCEPTION_YEAR=2023
-POM_URL=https://github.com/dock2dock/dock2dock-android/
-POM_ARTIFACT_ID=dock2dock-android
+VERSION_NAME=0.0.1
