--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 18
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: '18'
+          distribution: 'adopt'
 
       - name: Remove SNAPSHOT from version
         run: sed -i 's/-SNAPSHOT//g' gradle.properties
@@ -22,16 +23,17 @@ jobs:
         run: ./gradlew clean
 
       - name: Build and upload artifacts
-        run: ./gradlew dock2dock:uploadArchives --no-daemon --no-parallel
+        run: ./gradlew publishReleasePublicationToSonatypeRepository --no-daemon --no-parallel
         env:
-          SONATYPE_NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-          SONATYPE_NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
-          ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEYID }}
-          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
+          NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+          SONATYPE_STAGING_PROFILE_ID: ${{ secrets.SONATYPE_STAGING_PROFILE_ID }}
+          signing.keyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEYID }}
+          signing.key: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
+          signing.password: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
 
       - name: Publish release
         run: ./gradlew closeAndReleaseRepository
         env:
-          SONATYPE_NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-          SONATYPE_NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+          NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
