--- a/example/build.gradle
+++ b/example/build.gradle
@@ -23,4 +23,5 @@ dependencies {
 
     implementation project(path: ':crossdock')
     implementation project(path: ':networking')
+    implementation project(path: ':application')
 }
