Renamed folders added CHANGELOG.md file changed from VERSION_1_8 to VERSION_17 Java added settingsDialog so user can set default printer and handling unit. Changed 'Add' button to 'Print' Removed the passing of Dock2DockConfiguration.kt as a parameter and now using it -> Dock2DockConfiguration.Instance() to get the singleton instance Removed hard coding apiKey into example project, now using local.properties and BuildConfig

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -14,9 +14,9 @@ dependencies {
 }
 
 ext {
-    artifactId = "dock2dock-android"
-    artifactName = "dock2dock-android"
-    artifactDescrption = "Dock2Dock Android SDK"
+    artifactId = "application"
+    artifactName = "application"
+    artifactDescrption = "The application module of Dock2Dock Android SDK"
 }
 
 apply from: "${rootDir}/deploy/deploy.gradle"
