--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -22,9 +22,9 @@ dependencies {
 }
 
 ext {
-    artifactId = "dock2dock-android"
-    artifactName = "dock2dock-android"
-    artifactDescrption = "Dock2Dock Android SDK"
+    artifactId = "networking"
+    artifactName = "networking"
+    artifactDescrption = "The networking module of Dock2Dock Android SDK"
 }
 
 apply from: "${rootDir}/deploy/deploy.gradle"
