--- a/crossdock/build.gradle
+++ b/crossdock/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
 
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$compose_ui_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
@@ -22,9 +23,11 @@ dependencies {
 
     implementation "com.github.skydoves:sandwich:1.3.3"
 
+
+
     implementation project(":ui")
     implementation project(":networking")
-    implementation project(":application")
+    api project(":application")
 }
 
 ext {
