--- a/crossdock/src/main/AndroidManifest.xml
+++ b/crossdock/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.dock2dock.crossdock">
+<manifest package="io.dock2dock.networking">
 </manifest>
