updated release.yml added new module buildSrc and created Configuration.kt file which holds versioning and global variables to be used for deployment. removed CHANGELOG.md, will keep change logs details in release notes in github

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,3 +1,5 @@
+import io.dock2dock.android.Configuration
+
 apply from: configs.androidLibrary
 
 apply plugin: 'signing'
@@ -17,6 +19,8 @@ ext {
     artifactId = "application"
     artifactName = "application"
     artifactDescrption = "The application module of Dock2Dock Android SDK"
+    publishVersion = rootVersionName
+    groupId = Configuration.artifactGroup
 }
 
 apply from: "${rootDir}/deploy/deploy.gradle"
