--- a/build-configuration/android-base-library.gradle
+++ b/build-configuration/android-base-library.gradle
@@ -1,3 +1,5 @@
+import io.dock2dock.android.Configuration
+
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-parcelize"
@@ -10,7 +12,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdk 23
+        minSdk Configuration.minSdk
         targetSdkVersion rootProject.ext.compileSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
