--- a/crossdock/build.gradle
+++ b/crossdock/build.gradle
@@ -1,3 +1,5 @@
+import io.dock2dock.android.Configuration
+
 apply from: configs.androidLibrary
 
 apply plugin: 'signing'
@@ -23,8 +25,6 @@ dependencies {
 
     implementation "com.github.skydoves:sandwich:1.3.3"
 
-
-
     implementation project(":ui")
     implementation project(":networking")
     api project(":application")
@@ -34,6 +34,8 @@ ext {
     artifactId = "dock2dock-android"
     artifactName = "dock2dock-android"
     artifactDescrption = "Dock2Dock Android SDK"
+    publishVersion = rootVersionName
+    groupId = Configuration.artifactGroup
 }
 
 apply from: "${rootDir}/deploy/deploy.gradle"
