--- a/deploy/deploy-root.gradle
+++ b/deploy/deploy-root.gradle
@@ -1,4 +1,5 @@
 import java.time.Duration
+import io.dock2dock.android.Configuration
 
 // Create variables with empty default values
 ext["NEXUS_USERNAME"] = ''
@@ -7,6 +8,7 @@ ext["SONATYPE_STAGING_PROFILE_ID"] = ''
 ext["signing.keyId"] = ''
 ext["signing.password"] = ''
 ext["signing.key"] = ''
+ext["snapshot"] = ''
 
 File secretPropsFile = project.rootProject.file('local.properties')
 if (secretPropsFile.exists()) {
@@ -22,10 +24,17 @@ if (secretPropsFile.exists()) {
     ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
     ext["signing.password"] = System.getenv('SIGNING_PASSWORD')
     ext["signing.key"] = System.getenv('SIGNING_KEY')
+    ext["snapshot"] = System.getenv('SNAPSHOT')
+}
+
+if (snapshot) {
+    ext["rootVersionName"] = Configuration.snapshotVersionName
+} else {
+    ext["rootVersionName"] = Configuration.versionName
 }
 
 nexusPublishing {
-    packageGroup = GROUP
+    packageGroup = Configuration.artifactGroup
 
     repositories {
         sonatype {
