--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -1,3 +1,5 @@
+import io.dock2dock.android.Configuration
+
 apply from: configs.androidLibrary
 
 apply plugin: 'signing'
@@ -25,6 +27,8 @@ ext {
     artifactId = "networking"
     artifactName = "networking"
     artifactDescrption = "The networking module of Dock2Dock Android SDK"
+    publishVersion = rootVersionName
+    groupId = Configuration.artifactGroup
 }
 
 apply from: "${rootDir}/deploy/deploy.gradle"
