fix error with deploy.gradle referencing unknown variable. Added --stacktrace to /gradlew publishReleasePublicationToSonatypeRepository to get more logging information

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         run: ./gradlew clean
 
       - name: Build and upload artifacts
-        run: ./gradlew publishReleasePublicationToSonatypeRepository --no-daemon --no-parallel
+        run: ./gradlew publishReleasePublicationToSonatypeRepository --no-daemon --no-parallel --stacktrace
         env:
           NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
