--- a/deploy/deploy.gradle
+++ b/deploy/deploy.gradle
@@ -74,7 +74,7 @@ afterEvaluate { project ->
                         final depName = dep.hasProperty("dependencyProject") && dep.dependencyProject.hasProperty("artifactId") ?
                                 dep.dependencyProject.artifactId : dep.name
 
-                        final depVersion = dep.version != 'unspecified' ? dep.version : VERSION_NAME
+                        final depVersion = dep.version != 'unspecified' ? dep.version : project.publishVersion
 
                         final dependencyNode = dependenciesNode.appendNode("dependency")
                         dependencyNode.appendNode("groupId", depGroup)
