--- a/deploy/deploy-root.gradle
+++ b/deploy/deploy-root.gradle
@@ -2,12 +2,12 @@ import java.time.Duration
 import io.dock2dock.android.Configuration
 
 // Create variables with empty default values
-ext["NEXUS_USERNAME"] = ''
-ext["NEXUS_PASSWORD"] = ''
-ext["SONATYPE_STAGING_PROFILE_ID"] = ''
-ext["signing.keyId"] = ''
-ext["signing.password"] = ''
-ext["signing.key"] = ''
+ext["ossrhUsername"] = ''
+ext["ossrhPassword"] = ''
+ext["sonatypeStagingProfileId"] = ''
+ext["signingKeyId"] = ''
+ext["signingPassword"] = ''
+ext["signingKey"] = ''
 ext["snapshot"] = ''
 
 File secretPropsFile = project.rootProject.file('local.properties')
@@ -18,12 +18,12 @@ if (secretPropsFile.exists()) {
     p.each { name, value -> ext[name] = value }
 } else {
     // Use system environment variables
-    ext["ossrhUsername"] = System.getenv('OSSRH_USERNAME')
-    ext["ossrhPassword"] = System.getenv('OSSRH_PASSWORD')
-    ext["sonatypeStagingProfileId"] = System.getenv('SONATYPE_STAGING_PROFILE_ID')
-    ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
-    ext["signing.password"] = System.getenv('SIGNING_PASSWORD')
-    ext["signing.key"] = System.getenv('SIGNING_KEY')
+    ext["ossrhUsername"] = System.getenv('ORG_GRADLE_PROJECT_nexusUserName')
+    ext["ossrhPassword"] = System.getenv('ORG_GRADLE_PROJECT_nexusPassword')
+    ext["sonatypeStagingProfileId"] = System.getenv('ORG_GRADLE_PROJECT_sonatypeStagingProfileId')
+    ext["signingkeyId"] = System.getenv('ORG_GRADLE_PROJECT_signingKeyId')
+    ext["signingPassword"] = System.getenv('ORG_GRADLE_PROJECT_signingPassword')
+    ext["signingKey"] = System.getenv('ORG_GRADLE_PROJECT_signingPassword')
     ext["snapshot"] = System.getenv('SNAPSHOT')
 }
 
@@ -38,9 +38,9 @@ nexusPublishing {
 
     repositories {
         sonatype {
-            stagingProfileId = SONATYPE_STAGING_PROFILE_ID
-            username = NEXUS_USERNAME
-            password = NEXUS_PASSWORD
+            stagingProfileId = sonatypeStagingProfileId
+            username = ossrhUsername
+            password = ossrhPassword
             nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
         }
