--- a/deploy/deploy.gradle
+++ b/deploy/deploy.gradle
@@ -105,9 +105,9 @@ afterEvaluate { project ->
 
 signing {
     useInMemoryPgpKeys(
-            rootProject.ext["signing.keyId"],
-            rootProject.ext["signing.key"],
-            rootProject.ext["signing.password"],
+            rootProject.ext["signingKeyId"],
+            rootProject.ext["signingKey"],
+            rootProject.ext["signingPassword"],
     )
     sign publishing.publications
 }
