--- a/deploy/deploy.gradle
+++ b/deploy/deploy.gradle
@@ -104,10 +104,10 @@ afterEvaluate { project ->
 }
 
 signing {
-    useInMemoryPgpKeys(
-            rootProject.ext["signing.keyId"],
-            rootProject.ext["signing.key"],
-            rootProject.ext["signing.password"],
-    )
+//    useInMemoryPgpKeys(
+//            rootProject.ext["signing.keyId"],
+//            rootProject.ext["signing.key"],
+//            rootProject.ext["signing.password"],
+//    )
     sign publishing.publications
 }
