--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Publish release to Maven Central
 
 on:
+  release:
+    types: [ released ]
   workflow_dispatch:
 
 jobs:
@@ -10,30 +12,21 @@ jobs:
       - name: Clone Repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 18
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.13.0
         with:
-          java-version: '18'
-          distribution: 'adopt'
-
-      - name: Remove SNAPSHOT from version
-        run: sed -i 's/-SNAPSHOT//g' gradle.properties
+          distribution: 'zulu'
+          java-version: 17
 
       - name: Clean build directory
         run: ./gradlew clean
 
       - name: Build and upload artifacts
-        run: ./gradlew publishReleasePublicationToSonatypeRepository --no-daemon --no-parallel
+        run: ./gradlew publishReleasePublicationToSonatypeRepository --no-daemon --no-parallel --stacktrace
         env:
-          NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-          NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
-          SONATYPE_STAGING_PROFILE_ID: ${{ secrets.SONATYPE_STAGING_PROFILE_ID }}
-          signing.keyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEYID }}
-          signing.key: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
-          signing.password: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
-
-      - name: Publish release
-        run: ./gradlew closeAndReleaseRepository
-        env:
-          NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-          NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+          ORG_GRADLE_PROJECT_nexusUserName: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+          ORG_GRADLE_PROJECT_nexusPassword: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+          ORG_GRADLE_PROJECT_sonatypeStagingProfileId: ${{ secrets.SONATYPE_STAGING_PROFILE_ID }}
+          ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEYID }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
