--- a/crossdock/build.gradle
+++ b/crossdock/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 
     implementation "com.github.skydoves:sandwich:1.3.3"
 
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.2")
+
     implementation project(":ui")
     implementation project(":networking")
     api project(":application")
