- Created new freightmanagement and barcodeScanner modules. - Added DataCollection.aar - HoneywellSDK. - Added Dependencies and Versions to hold all package information to be reused across modules. - Moved Constants.kt from cross-dock to networking module. - Updated minor version in Configuration.kt. - Added shippingContainers page to example project and moved to full compose jetpack.

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,5 @@ include ':ui'
 include ':networking'
 include ':application'
 include ':crossdock'
+include ':freightmanagement'
+include ':barcodeScanner'
