--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,4 +1,4 @@
-import io.dock2dock.android.Configuration
+import io.dock2dock.android.*
 
 apply from: configs.androidLibrary
 
@@ -6,10 +6,11 @@ apply plugin: 'signing'
 apply plugin: 'maven-publish'
 
 dependencies {
-    implementation "androidx.compose.runtime:runtime:$compose_ui_version"
+    implementation(Dependencies.composeRuntime)
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
