--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,7 +2,7 @@ apply from: configs.androidApplication
 
 dependencies {
     implementation "androidx.core:core-ktx:$kotlinVersion"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
@@ -10,6 +10,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.navigation:navigation-compose:2.7.7'
+    implementation("androidx.compose.material:material-icons-extended:1.6.1")
+    implementation("androidx.compose.material3:material3")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -21,7 +24,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
+
+    implementation project(':freightmanagement')
     implementation project(path: ':crossdock')
-    implementation project(path: ':networking')
-    implementation project(path: ':application')
+    implementation project(path: ':barcodeScanner')
 }
