--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="com.honeywell.decode.permission.DECODE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,11 +11,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.AndroidSdk"
         tools:targetApi="31">
         <activity
             android:name="io.dock2dock.example.activities.MainActivity"
-            android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/Theme.AndroidSdk"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
