--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -1,4 +1,5 @@
-import io.dock2dock.android.Configuration
+import io.dock2dock.android.*
+
 
 apply from: configs.androidLibrary
 
@@ -8,7 +9,7 @@ apply plugin: 'maven-publish'
 dependencies {
     implementation "androidx.compose.runtime:runtime:$compose_ui_version"
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation(Dependencies.androidxLifecycleRunTimeKtx)
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
