fix error with direct local .aar file. Read this stackoverflow to solve https://stackoverflow.com/questions/60878599/error-building-android-library-direct-local-aar-file-dependencies-are-not-supp?answertab=trending#comment121488644_60888941

--- a/barcodeScanner/build.gradle
+++ b/barcodeScanner/build.gradle
@@ -12,8 +12,9 @@ dependencies {
     implementation(Dependencies.googleMaterial)
     implementation(Dependencies.googleGson)
     implementation(Dependencies.androidxLifecycleRunTimeKtx)
-    implementation files('libs/DataCollection.aar')
     implementation(Dependencies.androidxLifecycleCommon)
+
+    api project(":honeywell")
 
     testImplementation(Dependencies.jUnit)
     androidTestImplementation(Dependencies.androidxTestJunit)
