--- a/build-configuration/android-base-library.gradle
+++ b/build-configuration/android-base-library.gradle
@@ -9,7 +9,7 @@ apply plugin: "com.vanniktech.maven.publish"
 
 android {
     namespace DOCK2DOCK_ANDROID_NAMESPACE
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
