Remove Implementation files('libs/DataCollection'). This should only be added when running locally.

--- a/barcodeScanner/build.gradle
+++ b/barcodeScanner/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation(Dependencies.androidxLifecycleRunTimeKtx)
     implementation(Dependencies.androidxLifecycleCommon)
 
-    implementation files('libs/DataCollection.aar')
+    //implementation files('libs/DataCollection.aar')
     compileOnly files('libs/DataCollection.aar')
 
     testImplementation(Dependencies.jUnit)
