--- a/barcodeScanner/build.gradle
+++ b/barcodeScanner/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation(Dependencies.androidxLifecycleRunTimeKtx)
     implementation(Dependencies.androidxLifecycleCommon)
 
-    //implementation files('libs/DataCollection.aar')
+    debugImplementation files('libs/DataCollection.aar')
     compileOnly files('libs/DataCollection.aar')
 
     testImplementation(Dependencies.jUnit)
