Updated Configuration to 0.2.6-alpha. Added ConsignmentManifestsActivity Moved DefaultTopAppBar.kt into ui.components Added Dock2DockTextArea component Added Tag Component

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation project(':freightmanagement')
     implementation project(path: ':crossdock')
     implementation project(path: ':barcodeScanner')
+    implementation project(path: ':ui')
 }
